--- a/logging/fluent-bit.conf
+++ b/logging/fluent-bit.conf
@@ -1,85 +1,11 @@
 [SERVICE]
-    # Flush
-    # =====
-    # set an interval of seconds before to flush records to a destination
     flush        1
-
-    # Daemon
-    # ======
-    # instruct Fluent Bit to run in foreground or background mode.
     daemon       Off
-
-    # Log_Level
-    # =========
-    # Set the verbosity level of the service, values can be:
-    #
-    # - error
-    # - warning
-    # - info
-    # - debug
-    # - trace
-    #
-    # by default 'info' is set, that means it includes 'error' and 'warning'.
     log_level    info
-
-    # Parsers File
-    # ============
-    # specify an optional 'Parsers' configuration file
     parsers_file parsers.conf
-
-    # Plugins File
-    # ============
-    # specify an optional 'Plugins' configuration file to load external plugins.
     plugins_file plugins.conf
-
-    # HTTP Server
-    # ===========
-    # Enable/Disable the built-in HTTP Server for metrics
     http_server  Off
-    http_listen  0.0.0.0
-    http_port    2020
-
-    # Storage
-    # =======
-    # Fluent Bit can use memory and filesystem buffering based mechanisms
-    #
-    # - https://docs.fluentbit.io/manual/administration/buffering-and-storage
-    #
-    # storage metrics
-    # ---------------
-    # publish storage pipeline metrics in '/api/v1/storage'. The metrics are
-    # exported only if the 'http_server' option is enabled.
-    #
     storage.metrics on
-
-    # storage.path
-    # ------------
-    # absolute file system path to store filesystem data buffers (chunks).
-    #
-    # storage.path /tmp/storage
-
-    # storage.sync
-    # ------------
-    # configure the synchronization mode used to store the data into the
-    # filesystem. It can take the values normal or full.
-    #
-    # storage.sync normal
-
-    # storage.checksum
-    # ----------------
-    # enable the data integrity check when writing and reading data from the
-    # filesystem. The storage layer uses the CRC32 algorithm.
-    #
-    # storage.checksum off
-
-    # storage.backlog.mem_limit
-    # -------------------------
-    # if storage.path is set, Fluent Bit will look for data chunks that were
-    # not delivered and are still in the storage layer, these are called
-    # backlog data. This option configure a hint of maximum value of memory
-    # to use when processing these records.
-    #
-    # storage.backlog.mem_limit 5M
 
 # Monitor system logs via systemd
 [INPUT]
@@ -91,15 +17,55 @@
 [INPUT]
     Name         tail
     Path         /var/log/auth.log
-    Parser       syslog
+    Parser       syslog-rfc5424
     Tag          auth.log
 
-# Monitor syslog
+# Collect system logs
 [INPUT]
-    Name         tail
-    Path         /var/log/syslog
-    Parser       syslog
-    Tag          syslog
+    Name        tail
+    Path        /var/log/syslog,/var/log/messages
+    Tag         system.logs
+    Path_Key    filename
+    Parser      syslog-rfc5424
+    Refresh_Interval 5
+
+# CPU usage
+[INPUT]
+    Name         cpu
+    Tag          cpu.local
+    Interval_Sec 5
+
+# Memory usage
+[INPUT]
+    Name         mem
+    Tag          memory.local
+    Interval_Sec 5
+
+# Process summary
+[INPUT]
+    Name         proc
+    Tag          process_summary.local
+    Proc_name    *
+    Interval_Sec 5
+
+[INPUT]
+    Name         exec
+    Tag          socket_summary.local
+    Command      ss -tunlp | tail -n +2
+    Interval_Sec 5
+    Parser       ss_output
+
+# Disk I/O
+[INPUT]
+    Name         disk
+    Tag          diskio.local
+    Interval_Sec 5
+
+# Filesystem metrics
+[INPUT]
+    Name         disk
+    Tag          filesystem.local
+    Interval_Sec 5
 
 # Monitor other log files as needed, example for Apache access log
 [INPUT]
@@ -114,6 +80,13 @@
     Path         /var/log/nginx/access.log
     Tag          nginx.access
     Parser       nginx
+
+[INPUT]
+    Name        tail
+    Path        /var/log/unbound/unbound.log
+    Tag         unbound.log
+    Parser      unbound
+
 
 # Output configuration to send logs to a Fluent Bit server
 [OUTPUT]
